codex-rs/tui/src/snapshots/codex_tui__account_picker__tests__account_picker_manual.snap
---
source: tui/src/account_picker_tests.rs
assertion_line: 116
expression: terminal.backend()
---
  Choose account


  1. first@example.com           Plus  Resets: 0  5h   0% (Jul 10 17:00)  Weekly  12% (Jul 14)    In use
› 2. best@example.com (default)  Pro 200  Resets: 2  5h  72% (Jul 10 18:00)                                             
  3. unknown@example.com         Resets: -  Usage unknown
  4. weekly@example.com          Pro 100  Resets: 2  Weekly  84% (Jul 15 12:00)
  5. max@example.com             Pro 500  Resets: 2  5h  72% (Jul 10 18:00)
